Made it so that it outputs a message instead of taking you to a website